test_out/cpp_stl_98/make.stderr
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_98/io_local_var.cpp: In destructor ‘virtual io_local_var_t::~io_local_var_t()’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_98/io_local_var.cpp:29:23: error: ‘n_mess_up’ was not declared in this scope
     if (f_mess_up && !n_mess_up) {
                       ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_98/io_local_var.cpp: In member function ‘io_local_var_t::dummy_t* io_local_var_t::mess_up()’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_98/io_local_var.cpp:53:5: error: ‘n_mess_up’ was not declared in this scope
     n_mess_up = true;
     ^
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_98/io_local_var.cpp.o] Error 1
make[2]: Target `CMakeFiles/ks_tests.dir/build' not remade because of errors.
make[1]: *** [CMakeFiles/ks_tests.dir/all] Error 2
make[1]: Target `all' not remade because of errors.
make: *** [all] Error 2
make: Target `default_target' not remade because of errors.
